--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Leaflet Point Map with Sidebar</title>
+  <title>KPH Minas, Taman Hutan Raya Sultan Syarif Hasyim</title>
   <link rel="shortcut icon" href="./media/favicon.png" type="image/x-icon" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,11 +52,13 @@
 
   <div id="sidebar" class="vh-50 vh-100-ns w-100 w5-ns top-1-ns left-1-ns absolute-ns bg-white ph3 br1 ba b--black-10">
 
+    <!-- Masukkan header  -->
+
     <header class="pt3"> <!-- edit pathname to logo, insert alt name, adjust height-->
       <img src="media/logo.png" alt="your logo name" style="height: 30px;" />
 
       <h1 class="f3 mv2"> <!-- edit title and introductory text -->
-        Leaflet Point Map with Sidebar
+        KPH Minas, Taman Hutan Raya -  Sultan Syarif Hasyim
       </h1>
 
       <p>
