--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <div id="gallery"></div>
 
       <div id="description"></div>
+      <div id="test"></div>
 
       <a id="googleMaps" class="shadow-1 mv3 pa3 dn" href="" target="_blank">
         <span class="material-icons dtc v-mid pa2 pr3">location_on</span>
