--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
       <h3 class="f5 black-60 mv1"></h3>
 
       <div id="gallery"></div>
-
-      <div id="description"></div>
       <div id="test"></div>
+      <div id="description"></div>
 
       <a id="googleMaps" class="shadow-1 mv3 pa3 dn" href="" target="_blank">
         <span class="material-icons dtc v-mid pa2 pr3">location_on</span>
@@ -94,6 +93,13 @@
 
   <!-- Map container -->
   <div id="map" class="vh-50 vh-100-ns vw-100"></div>
+  <script src="data/BatasKawasanTahuraSultanSyarifQasim_3.js"></script>
+  <script>
+    var bounds_group = new L.featureGroup([]);
+    function setBounds() {
+      
+    }
+  </script>
 
 </body>
 
