--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Leaflet Point Map with Sidebar with Google Sheets">
   <meta name="author" content="Picturedigits">
+  <meta name="modify" content="Adopsi Pohon Riau">
 
   <!-- Read Tachyons CSS library-->
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
@@ -41,7 +42,7 @@
 
   <!-- Load Material icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+ 
   <!-- Read local JavaScript files -->
   <script src="./settings.js"></script>
   <script src="./script.js"></script>
@@ -55,15 +56,51 @@
     <!-- Masukkan header  -->
 
     <header class="pt3"> <!-- edit pathname to logo, insert alt name, adjust height-->
-      <img src="media/logo.png" alt="your logo name" style="height: 30px;" />
+      <img src="./logo_dislhkriau_kphminastahura.png" alt="kph Minastahura" style="height: 85px;" />
 
       <h1 class="f3 mv2"> <!-- edit title and introductory text -->
         KPH Minas, Taman Hutan Raya -  Sultan Syarif Hasyim
       </h1>
-
-      <p>
-        The <a href="https://handsondataviz.github.io/leaflet-storymaps-with-google-sheets/">Leaflet Point Map with Sidebar template</a> is designed to display points as custom thumbnail photo icons, organized by category, with a sidebar to show a multi-paragraph description and multi-image gallery for each point. Create your own version by entering map data into a <a href="https://docs.google.com/spreadsheets/d/1h1rJa-fshPbuzaqabQUjIDmuM2O6f5K0KPEvaAQT568/edit#gid=0">linked Google Sheet</a> or CSV file, and uploading it into a free GitHub repository to host online. Learn more in our book, Hands-On Data Visualization.
-      </p>
+      <div id="batas-kawasan">
+        <table>
+          <tr>
+            <th scope="row">Provinsi</th>
+            <td>Riau</td>
+          </tr>
+          <tr>
+            <th scope="row">Kabupaten</th>
+            <td>Kampar</td>
+          </tr>
+          <tr>
+            <th scope="row">Jenis KPH</th>
+            <td>KPHP</td>
+          </tr>
+          <tr>
+            <th scope="row">Unit KPH</th>
+            <td>Tahura Sultan Syarif Qasim </td>
+          </tr>
+          <tr>
+            <th scope="row">Nama KPH</th>
+            <td>Minas Tahura</td>
+          </tr>
+          <tr>
+            <th scope="row">Fungsi Kawasan</th>
+            <td>Tahura</td>
+          </tr>
+          <tr>
+            <th scope="row">Luas</th>
+            <td>3532 Ha</td>
+          </tr>
+          <tr>
+            <th scope="row">Sk MDL</th>
+            <td>SK. 756/Menhut-II/2012</td>
+          </tr>
+          <tr>
+            <th scope="row">Tanggal SK MDL</th>
+            <td>26 Desember 2012</td>
+          </tr>
+        </table>
+      </div>
 
     </header>
 
@@ -80,13 +117,13 @@
 
       <a id="googleMaps" class="shadow-1 mv3 pa3 dn" href="" target="_blank">
         <span class="material-icons dtc v-mid pa2 pr3">location_on</span>
-        <span class="dtc v-mid">View directions and hours on Google Maps</span>
+        <span class="dtc v-mid">Adopsi Sekarang di Sini</span>
       </a>
 
     </article>
 
     <footer class="black-50 f6 pv3">
-      Add more information about this map in this footer.
+      Referensi: Kementerian Lingkungan Hidup dan Kehutananan
     </footer>
 
   </div>
