--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
 
   <title>KPH Minas, Taman Hutan Raya Sultan Syarif Hasyim</title>
-  <link rel="shortcut icon" href="./media/favicon.png" type="image/x-icon" />
+  <!-- <link rel="shortcut icon" href="./media/favicon.png" type="image/x-icon" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Leaflet Point Map with Sidebar with Google Sheets">
   <meta name="author" content="Picturedigits">
-  <meta name="modify" content="Adopsi Pohon Riau">
+  <meta name="modifid" content="Adopsi Pohon Riau">
 
   <!-- Read Tachyons CSS library-->
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
@@ -56,7 +56,7 @@
     <!-- Masukkan header  -->
 
     <header class="pt3"> <!-- edit pathname to logo, insert alt name, adjust height-->
-      <img src="./logo_dislhkriau_kphminastahura.png" alt="kph Minastahura" style="height: 85px;" />
+      <img src="./logo_dislhkriau_kphminastahura.png" alt="kph Minastahura" style="height: 40px;" />
 
       <h1 class="f3 mv2"> <!-- edit title and introductory text -->
         KPH Minas, Taman Hutan Raya -  Sultan Syarif Hasyim
