--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <a id="googleMaps" class="shadow-1 mv3 pa3 dn" href="" target="_blank">
         <span class="material-icons dtc v-mid pa2 pr3">location_on</span>
-        <span class="dtc v-mid">Adopsi Sekarang di Sini</span>
+        <span class="dtc v-mid">Adopsi Sekarang</span>
       </a>
 
     </article>
